--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,7 @@
 Fbld 4:
 * Implement new spec.
   - Generalize support for static parameters.
+    * mref for static param should be entity the parameter is for.
   - Add support for qref import.
   - Add support for reading modules from other files.
   - Add support for parsing top level programs with implicit dependencies.
