--- a/TODO.txt
+++ b/TODO.txt
@@ -4,7 +4,7 @@ Fbld 4:
   - Add support for modules with anonymous interfaces. 
   - Add support for priv and abst.
   - Add support for reading modules from other files.
-  - Add support for parsing top level programs with implicit dependencies.
+  - Add support for parsing top level programs specified by directory.
 * Port existing programs and tests to new spec.
 * Refactor existing programs to take advantage of the new features.
 * Write a new program (deflate) taking advantage of the new features.
